--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,15 +1,16 @@
-image: Ubuntu
+image: Ubuntu  # образ для сборки
 
-stack: jdk 11
+stack: jdk 11  # версия JDK
 
 branches:
   only:
-    - master
+    - master  # ветка git
 
-build: off
+build: off  # будем использовать свой скрипт сборки
 
 install:
-    - java -jar ./artifacts/app-card-delivery.jar &
+  # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
+  - java -jar ./artifacts/app-ibank.jar -P:profile=test &
 
 build_script:
   - chmod +x gradlew
