--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,10 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    testImplementation 'com.codeborne:selenide:6.4.0'
+    testImplementation 'com.codeborne:selenide:6.6.3'
 
-    implementation 'com.github.javafaker:javafaker:1.0.2'
-    implementation 'io.rest-assured:rest-assured:5.0.1'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'io.rest-assured:rest-assured:5.1.1'
     testImplementation 'com.google.code.gson:gson:2.9.0'
 
     compileOnly 'org.projectlombok:lombok:1.18.24'
@@ -31,6 +31,5 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    // в тестах, вызывая `gradlew test -Dselenide.headless=true` будем передавать этот параметр в JVM (где его подтянет Selenide)
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
